force-app/main/default/objects/Trigger_Details__c/Trigger_Details__c.object-meta.xml
<CustomObject>
    <label>Trigger Details</label>
    <nameField>
        <label>Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>