force-app/main/default/objects/Trigger_Details__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>