force-app/main/default/objects/Trigger_Details__c/fields/Test_Class__c.field-meta.xml
<CustomField>
    <fullName>Test_Class__c</fullName>
    <label>Test Class</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>