force-app/main/default/objects/Trigger_Details__c/fields/Triggers_Code__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Code__c</fullName>
    <label>Triggers Code</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>